# Testando_as_manha

MemoryScannerWriter/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
MemoryScannerWriter/src/: main.cpp
MemoryScannerWriter/src/engine/: AdvancedTools.cpp  AdvancedTools.h  MemoryEngine.cpp  MemoryEngine.h  ProcessManager.cpp  ProcessManager.h  WindowsAPI.cpp  WindowsAPI.h
MemoryScannerWriter/src/gui/: MainFrame.cpp  MainFrame.h
MemoryScannerWriter/src/models/: ScanResult.cpp  ScanResult.h
docs/superpowers/specs/: 2026-04-15-memory-scanner-writer-design.md
